--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -12,30 +11,51 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Results summary component</title>
 
     <link href="./output.css" rel="stylesheet" />
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
-  <body>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who
-    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
-    / 100 Visual 72 / 100 Continue
+  <body
+    class="h-screen font-sans text-center flex flex-col justify-items-center items-center"
+  >
+    <main class="flex flex-row w-720 rounded-3xl">
+      <section
+        class="flex flex-col w-1/2 items-center bg-gradient-to-b from-grad-light-slate-blue to-grad-light-royal-blue rounded-3xl"
+      >
+        <h1 class="text-light-lavender py-8 text-2xl">Your Result</h1>
+        <div
+          class="flex flex-col py-10 px-12 rounded-full bg-gradient-to-t from-grad-persian-blue to-grad-violet-blue"
+        >
+          <span class="text-white text-6xl font-bold">76</span
+          ><span class="text-light-lavender">of 100</span>
+        </div>
+        <h2 class="text-white font-bold pt-7 pb-4 text-3xl">Great</h2>
+        <p class="text-light-lavender px-12 text-p pb-10">
+          You scored higher than 65% of the people who have taken these tests.
+        </p>
+      </section>
+      <section class="flex flex-col w-1/2 items-center">
+        <h2>Summary</h2>
+        <div>Reaction</div>
+        <div>Memory</div>
+        <div>Verbal</div>
+        <div>Visual</div>
+        <button>Continue</button>
+      </section>
+    </main>
 
-    <div class="attribution">
+    <footer class="text-center text-xs py-8">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+      >. Coded by <a class="text-attribution-blue" href="#">Your Name Here</a>.
+    </footer>
   </body>
 </html>
