feat: active state hover on button

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </p>
         </div>
         <button
-          class="bg-dark-gray-blue py-3 m-10 w-4/5 text-pale-blue text-p rounded-full"
+          class="bg-dark-gray-blue py-3 m-10 w-4/5 text-pale-blue text-p rounded-full hover:bg-gradient-to-b from-grad-light-slate-blue to-grad-light-royal-blue"
         >
           Continue
         </button>
