--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <body
     class="h-screen font-sans text-center flex flex-col justify-center items-center"
   >
-    <main class="flex flex-col sm:flex-row smw-720 rounded-3xl">
+    <main
+      class="bg-white flex flex-col sm:flex-row smw-720 rounded-3xl sm:drop-shadow-2xl"
+    >
       <section
         class="flex flex-col sm:w-1/2 items-center bg-gradient-to-b from-grad-light-slate-blue to-grad-light-royal-blue rounded-b-3xl sm:rounded-3xl"
       >
@@ -123,7 +125,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a class="text-attribution-blue" href="#">Your Name Here</a>.
+      >. Coded by
+      <a class="text-attribution-blue" href="https://github.com/lizkaufman"
+        >Liz Kaufman</a
+      >.
     </footer>
   </body>
 </html>
