feat: readme update

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
           ><span class="text-light-lavender">of 100</span>
         </div>
         <h2
-          class="text-white font-bold pt-6 sm:pt-7 pb-2 sm:pb-4 text-2xl sm:text-3xl"
+          class="text-white font-bold pt-6 sm:pt-7 pb-2 sm:pb-6 text-2xl sm:text-3xl"
         >
           Great
         </h2>
-        <p class="text-light-lavender px-12 text-p pb-8 sm:pb-10">
+        <p class="text-light-lavender px-12 text-p pb-8 sm:pb-10 w-4/5">
           You scored higher than 65% of the people who have taken these tests.
         </p>
       </section>
@@ -67,7 +67,7 @@
           />
           <h1 class="text-right text-light-red">Reaction</h1>
           <p class="px-3 text-dark-gray-blue ml-auto">
-            80
+            <span></span>
             <span class="opacity-50">/ 100</span>
           </p>
         </div>
